--- a/stylehome.css
+++ b/stylehome.css
@@ -3,15 +3,17 @@
   --logo-initial-color: #242933;
   --vivo-blue: #415fff;
   --background-white:#FEFEFE;
+  --background-white-2:#F5F7FA ;
 }
 * {
   padding: 0;
   margin: 0;
   box-sizing: border-box;
   font-family: 'Sen', sans-serif;
+  overflow-x: hidden;
 }
 body {
-  width: 100%;
+  width: 100vw;
   background-color: var(--background-white)
 }
 ul,
@@ -21,16 +23,18 @@ a {
   text-decoration: none;
 }
 
-/* navbar */
+/* navbar-start */
 
 .navbar {
   display: flex;
   flex-direction: row;
-  margin: 0 13rem;
+  width: 100%;
+  padding: 0 13rem;
   justify-content: space-between;
   align-items: center;
   background-color: var(--background-white);
   height: 5.375rem;
+  position: fixed;
 }
 
 /* logo */
@@ -84,3 +88,5 @@ svg{
   fill: var(--vivo-blue);
 }
 
+/* navbar-end */
+/* home-main-start */
