--- a/stylehome.css
+++ b/stylehome.css
@@ -35,6 +35,7 @@ a {
   background-color: var(--background-white);
   height: 5.375rem;
   position: fixed;
+  z-index: 10000;
 }
 
 /* logo */
@@ -90,3 +91,44 @@ svg{
 
 /* navbar-end */
 /* home-main-start */
+.home-main{
+  height: 95vh;
+  width: 100%;
+  background-image: url(./assets/home/home-main.jpg);
+  background-position: center;
+  background-size: cover;
+  background-repeat: no-repeat;
+  overflow-x: hidden;
+  margin-top: 2rem; ;
+}
+/* home-main-end */
+/* home-main-2-start */
+.home-main-2{
+  width:100vw;
+  background-color: var(--background-white-2);
+  display: flex;
+  justify-content: center;
+  padding: 4rem 0;
+}
+.home-images {
+  width: 82rem;
+}
+.img-container {
+  height: 40rem;
+  overflow: hidden;
+  border-radius: 30px;
+  margin-bottom: 2rem;
+}
+
+.img-container img:hover {
+  transform: scale(1.05);
+}
+
+.img-container img {
+  width: 100%;
+  height: 100%;
+  transition: transform 1s ease-in-out;
+}
+/* home-main-2-end */
+
+
