--- a/01Muzammil/vivo-exclusive-store/style-vivo-exclusive.css
+++ b/01Muzammil/vivo-exclusive-store/style-vivo-exclusive.css
@@ -279,3 +279,67 @@ footer{
   }
   
   /* footer-end */
+  @media (min-width: 1024px) and (max-width: 1440px) {
+    .navbar {
+      padding: 0 7rem;
+    }
+  }
+  @media (min-width: 768px) and (max-width: 1024px) {
+    /* navbar */
+    .navbar {
+      padding: 0 1.5rem;
+    }
+    .sectionids-ul li a {
+      font-size: 13px;
+    }
+    .logo-div svg{
+      width: 70%;
+    }
+    .icon-div ul li svg {
+      width: 19px; 
+    }
+    /* navbar */
+    /* home-section */
+  
+  }
+  
+  @media (max-width: 768px) {
+    .navbar {
+      flex-direction: row;
+      align-items: center;
+      justify-content: space-between;
+      padding: 0 3rem;
+    }
+    
+    .logo-div {
+      order: 1;
+    }
+    
+    .icon-div {
+      order: 3;
+    }
+    
+    .sectionids {
+      display: none;
+      position: fixed;
+      top: 100%; /* Position below the navbar */
+      left: 0;
+      width: 100%;
+      height: 50%;
+      background-color: rgba(0, 0, 0, 0.5);
+      overflow: auto;
+      color: white;
+    }
+  
+    #overlay {
+      display: block;
+      pointer-events: auto;
+      visibility: visible;
+    }
+  
+    .sectionids {
+      font-size: 16px;
+      color: white;
+    }
+  }
+  
