--- a/krishna/support.css
+++ b/krishna/support.css
@@ -394,27 +394,54 @@ p {
   section > ul {
     justify-content: center;
     position: relative;
-    width: 10rem;
+    width: 15rem;
     font-size: medium;
     justify-content: left;
   }
   .main-container {
-    transform: translate(10px, -33px);
+    transform: translate(7px, -31px);
   }
   .support-banner > h1 {
     text-align: center;
     font-size: 2rem;
   }
+  .support-icons-text-size {
+    font-size: 1.0rem;
+}
+  .support-banner>form {
+    width: 80%;
+    height: 2.2rem;
+    padding: 0.5rem;
+    
+  }
+  .support-icons-symbol, p {
+    font-size: medium;
+}
+.support-qurie {
+  font-size: medium;
+  padding-top: 2rem;
+} 
+  .support-icons-symbol {
+    width: 10rem;
+    height: 8rem;
+    align-items: center;
+    justify-content: center;
+}
+  .support-banner>form>input{
+    padding: 0.5rem;
+    
+  }
   .support-icons {
     width: 100%;
+    justify-content: space-around;
   }
   .support-icons-mainBox {
-    width: 50%;
+    width: 8.1rem;
   }
   .support-banner {
     padding-top: 10rem;
     font-size: small;
-    height: 91vh;
+    height: 27rem;
     gap: 1.2rem;
   }
   .support-service-main-content {
@@ -424,7 +451,10 @@ p {
   }
   .support-service-main-image {
     width: 100%;
-    border-radius: 30px;
+    border-top-right-radius: 18px;
+    border-top-left-radius: 18px;
+    border-bottom-right-radius: 0;
+    border-bottom-left-radius: 0;
     object-fit: inherit;
   }
   .service-Activity {
@@ -466,10 +496,18 @@ p {
     width: 100%;
   }
   .support-contactus-text {
-    font-size: 2vh;
-    line-height: 3vh;
+    font-size: 0.85rem;
+    line-height: 0.9rem;  
   }
   .for-height{
-    height: 358rem;
+    height: 343rem;
   }
+  /* for tab */
+  @media screen and (min-width: 700px) {
+    .support-banner {
+      padding-top: 5rem;
+      background-color: wheat;
+      height: 12655rem;
+    }
+
 }
